--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.13.1",
-    "google-map-react": "^0.18.3",
+    "google-maps-react": "^1.0.18",
     "react": "^15.3.1",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.1",
