--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "practice",
   "version": "0.0.1",
+  "engines": {
+    "node": "6.3.1",
+    "npm": "3.10.3"
+  },
   "private": true,
   "devDependencies": {
     "react-scripts": "0.2.3"
