--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-router": "^2.7.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
